--- a/SoundCloud/SoundCloud/Base.lproj/Main.storyboard
+++ b/SoundCloud/SoundCloud/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="u1M-N8-ftL">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -120,6 +120,7 @@
                     </view>
                     <connections>
                         <outlet property="resultSearchView" destination="xLE-gf-vWI" id="jGK-JH-dmb"/>
+                        <outlet property="searchBar" destination="F9M-nX-uCc" id="yJ8-cd-cgr"/>
                         <outlet property="suggestionSearchView" destination="7uc-bn-cWZ" id="fsR-rX-jWS"/>
                     </connections>
                 </viewController>
