--- a/SoundCloud/SoundCloud/Search/View/SuggestionSearchView.xib
+++ b/SoundCloud/SoundCloud/Search/View/SuggestionSearchView.xib
@@ -14,6 +14,10 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SuggestionSearchView" customModule="SoundCloud" customModuleProvider="target">
             <connections>
                 <outlet property="historyTableView" destination="Swx-9E-X0B" id="liD-gC-glz"/>
+                <outletCollection property="hotButtons" destination="qYK-UY-SSl" collectionClass="NSMutableArray" id="NGd-DS-EGX"/>
+                <outletCollection property="hotButtons" destination="QZr-Iq-DhC" collectionClass="NSMutableArray" id="Cl9-nQ-RMh"/>
+                <outletCollection property="hotButtons" destination="Qi6-r8-BDB" collectionClass="NSMutableArray" id="ezm-xo-ZXo"/>
+                <outletCollection property="hotButtons" destination="rht-CC-3cD" collectionClass="NSMutableArray" id="bSd-oc-54x"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
