--- a/SoundCloud/SoundCloud/Base.lproj/LaunchScreen.storyboard
+++ b/SoundCloud/SoundCloud/Base.lproj/LaunchScreen.storyboard
@@ -17,7 +17,18 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchBG" translatesAutoresizingMaskIntoConstraints="NO" id="Gz4-oj-hiT">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Gz4-oj-hiT" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="6iG-d3-TZH"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Gz4-oj-hiT" secondAttribute="trailing" id="e4w-Dh-3vG"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Gz4-oj-hiT" secondAttribute="bottom" id="ly7-LH-9wL"/>
+                            <constraint firstItem="Gz4-oj-hiT" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="s3K-gx-iM2"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
@@ -26,4 +37,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="LaunchBG" width="375" height="667"/>
+    </resources>
 </document>
