--- a/SoundCloud/SoundCloud/Base.lproj/Main.storyboard
+++ b/SoundCloud/SoundCloud/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="0AD-QS-bHe">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="N9b-IM-n6D">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -68,6 +68,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="oY1-d2-yGg"/>
                     <connections>
                         <outlet property="tableView" destination="bCr-2P-n0W" id="m0R-dN-NuS"/>
                         <outlet property="titleView" destination="6FM-JO-NrP" id="lEs-aC-kYi"/>
@@ -75,7 +76,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="117.59999999999999" y="117.39130434782609"/>
+            <point key="canvasLocation" x="1056.8" y="117.39130434782609"/>
         </scene>
         <!--Search View Controller-->
         <scene sceneID="vNX-jF-VJA">
@@ -126,7 +127,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rAM-pi-Bhq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="881" y="117"/>
+            <point key="canvasLocation" x="1820" y="116.49175412293854"/>
         </scene>
         <!--Library View Controller-->
         <scene sceneID="TBT-WL-qVk">
@@ -174,6 +175,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Ubf-bi-fBu"/>
                     </view>
+                    <navigationItem key="navigationItem" id="CKX-y1-31n"/>
                     <connections>
                         <outlet property="tableView" destination="NOv-MH-Lq3" id="EPN-g4-uxZ"/>
                         <outlet property="titleView" destination="obY-h4-VQn" id="mae-6D-CTa"/>
@@ -181,7 +183,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LP4-Gn-VaQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1649" y="117"/>
+            <point key="canvasLocation" x="3527.1999999999998" y="116.49175412293854"/>
         </scene>
         <!--Playlist View Controller-->
         <scene sceneID="h7Z-GP-hsd">
@@ -275,7 +277,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eqH-Ag-dKh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2413.5999999999999" y="115.59220389805098"/>
+            <point key="canvasLocation" x="4292" y="115.59220389805098"/>
         </scene>
         <!--List Song View Controller-->
         <scene sceneID="ojd-Xf-PE3">
@@ -318,7 +320,41 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vo3-jH-ktP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3182" y="116"/>
+            <point key="canvasLocation" x="5060" y="115.59220389805098"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="2AU-kK-62G">
+            <objects>
+                <navigationController storyboardIdentifier="HomeNavigation" automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="Nrg-cr-GWq" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="zoa-lj-WZu">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="at0-qD-FsS"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DZa-ng-fqI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="117.59999999999999" y="117.39130434782609"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="IOX-BY-YAz">
+            <objects>
+                <navigationController storyboardIdentifier="LibraryNavigation" automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="N9b-IM-n6D" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="fDZ-GE-oe0">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="0AD-QS-bHe" kind="relationship" relationship="rootViewController" id="wzk-2T-tSL"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yC6-k4-LUg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2588" y="116.49175412293854"/>
         </scene>
     </scenes>
     <resources>
